--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,13 @@
 
 
 
+body, html{
+
+    padding:0;
+    margin:0;
+    height: 100vh;
+}
+
 #searchbar{
     width: 484px;
     height: 44px;
@@ -19,47 +26,53 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
     width:100%;
-    height:40%;
-    position: absolute;
-}
+    height:90%;
 
-.menu{
-    display:flex;
-    flex-flow: row-reverse wrap;
-
-}
-
-ul{
-    list-style-type:none;
-    margin:0;
-    padding:0;
-    
-}
-li{
-    display:inline;
-   
-}
-
-a{
-    color: black;
-}
-
-button{
-    background-color:#f2f2f2;
-    border: 1px solid #f2f2f2;
-    border-radius: 4px;
-    color: #5F6368;
-    font-size: 14px;
-    margin: 20px 4px;
-    padding: 0 16px;
-    height: 36px;
-    text-align: center;
 }
 
 .footer{
+
+display:flex;
+align-items: flex-end;
+list-style: none;
+justify-content: space-between;
+padding: 30px 0px 0px 10px;
+
+}
+
+
+
+
+.header-wrapper{
+    display: flex;
+    flex-flow: row-reverse;
+    padding: 0 30px;
+
+    
+}
+
+.menu{
+
     display:flex;
-    flex-flow: row wrap;
-    position: absolute;
-    height:-95%;
-    background-color: #f2f2f2;
+    flex-flow: row;
+    width:30%;
+    justify-content: space-between;
+    list-style: none;
+    padding:0;
+        
+
+}
+.menu li a{
+
+    color: rgba(0,0,0,0.87);
+    text-decoration: none;
+    text-transform: capitalize;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+
+.menu li a:hover{
+    text-decoration:underline
+}
